# classregisterer

./: Dockerfile  pyproject.toml  requirements.txt
class_registerer/: main.py
static/: index.js  styles.css
templates/: index.html
tests/: test_class_registerer.py
