[tool.poetry]
name = "class_registerer"
version = "0.1.0"
description = ""
authors = ["DonQueso89 <kg.v.ekeren@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
black = "^21.9b0"
pendulum = "^2.1.2"
requests = "^2.26.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
